--- a/everland/everland.csproj
+++ b/everland/everland.csproj
@@ -8,6 +8,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\everland.services\everland.services.csproj" />
+  </ItemGroup>
+
 
 
 </Project>
